--- a/python_scripts/pyproject.toml
+++ b/python_scripts/pyproject.toml
@@ -22,6 +22,7 @@ pytest-xdist = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 lxml = "^4.9.1"
+pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
