Move 'real' functions to dedicated module
This is needed, as the fixtures are not hypothesis compatible
Add missing pydantic requirement to .pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,7 @@ repos:
           - lxml
           - xmldiff
           - pytest
+          - pydantic
         exclude: |
           (?x)^(
             python_scripts/tests
