--- a/python_scripts/pyproject.toml
+++ b/python_scripts/pyproject.toml
@@ -23,6 +23,7 @@ pytest-xdist = "^3.2.0"
 [tool.poetry.dev-dependencies]
 lxml = "^4.9.1"
 pytest = "^7.2.1"
+pydeps = "^1.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
