--- a/python_scripts/pyproject.toml
+++ b/python_scripts/pyproject.toml
@@ -15,7 +15,7 @@ dict2xml = "^1.7.2"
 black = "^22.12.0"
 xmldiff = "^2.5"
 pytest = "^7.2.1"
-hypothesis = {extras = ["all"], version = "^6.67.1"}
+hypothesis = { extras = ["all"], version = "^6.67.1" }
 defusedxml = "^0.7.1"
 lxml = "^4.9.2"
 pytest-xdist = "^3.2.0"
@@ -44,7 +44,7 @@ log_file_date_format = "%Y-%m-%d %H:%M:%S"
 line-length = 79
 
 [tool.pyright]
-#venvPath="python_scripts/.venv"
+venvPath = ".venv"
 
 [tool.isort]
 profile = "black"
