Use custom types
Add latest typing-extensions version to get support for PEP-727.
Create custom Annotated types.
Update precommit config.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,6 +50,7 @@ repos:
           - xmldiff
           - pytest
           - pydantic
+          - typing-extensions>=4.9.0
         exclude: |
           (?x)^(
             python_scripts/tests
