--- a/python_scripts/pyproject.toml
+++ b/python_scripts/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 rtfparse = "^0.7.8"
 beautifulsoup4 = "^4.11.1"
 pandas = "^1.5.1"
-pydantic = "^2.3.0"
+pydantic = "^2.5.3"
 dict2xml = "^1.7.2"
 black = "^22.12.0"
 xmldiff = "^2.5"
@@ -21,6 +21,8 @@ lxml = "^4.9.2"
 pytest-xdist = "^3.2.0"
 annotated-types = "^0.5.0"
 typing-extensions = "^4.9.0"
+pyyaml = "^6.0.2"
+numpy = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 lxml = "^4.9.1"
