--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
     rev: 1.7.10
     hooks:
       - id: bandit
-        exclude: ^tests/
+        exclude: ^python_scripts/tests/
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.3.0
     hooks:
